fix input colours in dark mode

--- a/src/components/_dark_mode.scss
+++ b/src/components/_dark_mode.scss
@@ -117,26 +117,48 @@
     }
 
     .input-window {
-      input[type="text"] {
-        background-color: $dark-background-color;
-        color: $light-text-color;
-        border: 1px solid $white;
+      .message-input-container {
+        input[type="text"] {
+          background-color: $dark-background-color;
+          color: $light-text-color;
+          border: 1px solid $white;
 
-        &:hover {
-          border: 1px solid $theme-color;
-          box-shadow: inset 0px 0px 0px 1px $theme-color;
+          &:hover {
+            border: 1px solid $theme-color;
+            box-shadow: inset 0px 0px 0px 1px $theme-color;
+          }
+
+          &:focus {
+            outline: none;
+            border: 1px solid $theme-color;
+            box-shadow: inset 0px 0px 0px 1px $theme-color;
+            background: $dark-theme-highlight-color;
+          }
         }
 
-        &:focus {
-          outline: none;
-          border: 1px solid $theme-color;
-          box-shadow: inset 0px 0px 0px 1px $theme-color;
-          background: $dark-theme-highlight-color;
+        ::placeholder {
+          color: transparentize($light-text-color, 0.3);
         }
-      }
 
-      ::placeholder {
-        color: transparentize($light-text-color, 0.3);
+        .emoji-button-container {
+          button {
+            &#emoji-button {
+
+              &:hover {
+                svg path#icon {
+                  fill: $theme-color;
+                }
+              }
+
+              &:focus {
+                svg path#icon {
+                  fill: $light-purple;
+                }
+              }
+            }
+          }
+        }
+
       }
 
       input[type="submit"] {
